--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,11 @@
     "name": "My First Extension",
     "version": "1.0",
     "description": "This is my first Chrome extension!",
-    "permissions": ["activeTab", "scripting"],
+    "permissions": [],
     "action": {
-      "default_popup": "popup.html",
+      "default_popup": "index.html",
       "default_icon": "icon.png"
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "icons": {
+    }, "icons": {
       "48": "icon.png"
     }
   }
