--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,24 @@
 {
-    "manifest_version": 3,
-    "name": "My First Extension",
-    "version": "1.0",
-    "description": "This is my first Chrome extension!",
-    "permissions": ["activeTab", "contextMenus"],
-    "background": {
-      "service_worker": "background.js"
-    },"action": {
-      "default_popup": "index.html",
-      "default_icon": "icon.png"
-    }, "icons": {
-      "48": "icon.png"
+  "manifest_version": 3,
+  "name": "My First Extension",
+  "version": "1.0",
+  "description": "This is my first Chrome extension!",
+  "permissions": ["activeTab", "contextMenus"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": "icon.png"
+  },
+  "icons": {
+    "48": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["script/sidebar.js"],
+      "css": ["css/sidebar.css"]
     }
-  }
-  
+  ]
+}
