--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "My First Extension",
   "version": "1.0",
   "description": "This is my first Chrome extension!",
-  "permissions": ["activeTab", "contextMenus", "scripting"],
+  "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   },
