Notes created are added into the sidebar
1) changed the css format of notes.html
2) added storageAPI as a content script
3) made background.js a module
4) added logic so that when background is opened all the notes from local storage are put into it
5)

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "This is my first Chrome extension!",
   "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "index.html",
@@ -17,12 +18,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["script/sidebar.js"],
+      "js": ["script/sidebar.js", "script/storageAPI.js"],
       "css": ["css/sidebar.css"]
     }
   ],
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ]
+  "host_permissions": ["http://*/*", "https://*/*"]
 }
