Save notes completed
When save button is pressed, all input from notes is saved onto chrome.storage.local and then immediately displayed as a button on sidebar. When button is clicked, contents are saved. This saving feature can be removed. A delete button must be developed now

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["script/sidebar.js"],
+      "js": ["script/injectsidebar.js"],
       "css": ["css/sidebar.css"]
     }
   ]
