Plus button exists.
Delete button exists but doesn't do anything. Certain blocks of unused code deleted. All files seem edited due to attempt at organizing html files in new folder. Undid change as did not succeed.

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "This is my first Chrome extension!",
   "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "script/background.js"
   },
   "action": {
     "default_popup": "index.html",
