Open notes.html and fix note error

--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,11 @@
   "host_permissions": [
     "http://*/*",
     "https://*/*"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["notes.html"],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
