Added a note menu mode
the note mode opens when you click a note in the sidebar. You can change the title and content and then save the note and it will change

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["notes.html"],
+      "resources": ["notes.html", "/back.jpg"],
       "matches": ["<all_urls>"]
     }
   ]
